# copilot-console

./: .gitignore  CHANGELOG.md  README.md  package.json  pyproject.toml
.github/workflows/: release.yml
.squad/: decisions.md  routing.md  team.md
.squad/agents/fenster/: charter.md  history.md
.squad/agents/hockney/: charter.md  history.md
.squad/agents/keaton/: charter.md  history.md
.squad/agents/mcmanus/: charter.md  history.md
.squad/agents/ralph/: charter.md  history.md
.squad/agents/scribe/: charter.md  history.md
.squad/casting/: history.json  policy.json  registry.json
.squad/decisions/: decisions.md
.squad/identity/: now.md  wisdom.md
docs/: Workflows.md  index.html  option-c-mockup.html  pin-icons.html  slash-command-architecture.md
docs/guides/: AF_SDK_PATCHES.md  CONTRIBUTING.md  DEV-SETUP.md  FAQ.md  INSTALL.md  KNOWN-LIMITATIONS.md  MCP-SERVERS.md  MOBILE-COMPANION.md  SAMPLES.md  TROUBLESHOOTING.md  WORKFLOWS.md
frontend/: vite.config.ts
frontend/public/: manifest.json  sw.js
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: activeAgents.test.ts  activeAgents.ts  agents.ts  auth.ts  client.test.ts  client.ts  compactBridge.ts  events.ts  help.ts  mcp.test.ts  mcp.ts  mcpOAuth.test.ts  mcpOAuth.ts  mcpOAuthBridge.ts  pins.ts  projects.ts  search.ts  sessions.p3.test.ts  sessions.test.ts  sessions.ts  settings.ts  viewed.ts  workflows.ts
frontend/src/components/: ErrorBoundary.tsx
frontend/src/components/agents/: AgentLibrary.tsx
frontend/src/components/automations/: AutomationManager.tsx
frontend/src/components/chat/: AskUserCard.test.tsx  AskUserCard.tsx  ChatPane.test.tsx  ChatPane.tsx  ElicitationCard.test.tsx  ElicitationCard.tsx  InputBox.integration.test.tsx  InputBox.test.tsx  InputBox.tsx  MCPSelector.test.tsx  MCPSelector.tsx  MessageBubble.tsx  MessageBubble.tsx.bak  ModeSelector.tsx  PinIcons.tsx  PinsDrawer.tsx  RelatedSessions.tsx  SlashCommandPalette.tsx  StreamingMessage.tsx  SubAgentSelector.tsx  TabBar.test.tsx  TabBar.tsx  TokenUsageSlider.tsx  ToolsSelector.tsx  slashCommands.ts  useFileUpload.ts  useSlashCommands.ts
frontend/src/components/common/: ConfirmModal.tsx  Dropdown.test.tsx  Dropdown.tsx  ErrorBanner.tsx  FolderBrowserModal.tsx  Modal.tsx  ModelSelector.tsx  ScrollableRow.tsx  SystemPromptEditor.tsx  Toast.tsx
frontend/src/components/layout/: BannerHost.tsx  Header.tsx  Layout.tsx  Sidebar.test.tsx  Sidebar.tsx
frontend/src/components/search/: SearchModal.tsx
frontend/src/components/session/: MCPServerEditor.test.tsx  MCPServerEditor.tsx  MCPServersTab.test.tsx  MCPServersTab.tsx  SessionItem.test.tsx  SessionItem.tsx  SessionList.tsx  SettingsModal.test.tsx  SettingsModal.tsx
frontend/src/components/taskboard/: TaskBoard.tsx
frontend/src/components/workflows/: HumanInputRow.test.tsx  WorkflowEditor.test.tsx  WorkflowEditor.tsx  WorkflowLibrary.tsx  WorkflowRunView.tsx
frontend/src/hooks/: useBanner.ts  useSession.ts  useTheme.ts
frontend/src/mobile/: MobileApp.tsx  mobile.css  mobileClient.ts  mobileStepParser.ts
frontend/src/mobile/components/: MobileAskUserCard.tsx  MobileChatView.tsx  MobileElicitationCard.tsx  MobileSessionList.tsx  MobileSettings.tsx
frontend/src/stores/: agentStore.ts  authStore.ts  automationStore.ts  bannerStore.ts  chatStore.stage3.test.ts  chatStore.stage6.test.ts  chatStore.test.ts  chatStore.ts  pinStore.ts  projectStore.ts  sessionStore.p3.test.ts  sessionStore.test.ts  sessionStore.ts  tabStore.ts  toastStore.ts  uiStore.ts  viewedStore.ts  workflowStore.ts
frontend/src/types/: agent.ts  chatStep.typetest.ts  mcp.ts  message.ts  pin.ts  session.ts  workflow.ts
frontend/src/utils/: chatUtils.ts  desktopNotifications.ts  fileIcon.ts  formatTimestamp.ts  openSession.ts  retry.ts  sessionFilters.ts  sseParser.ts
scripts/: dev.js  install.ps1  install.sh  test_elicitation_mcp.py
src/copilot_console/: __init__.py  cli.py  cli_notify.py
src/copilot_console/app/: config.py  main.py
src/copilot_console/app/middleware/: selective_gzip.py
src/copilot_console/app/models/: mcp.py  message.py  pin.py  search.py  session.py  workflow.py
src/copilot_console/app/routers/: __init__.py  agents.py  auth.py  cli_hooks.py  events.py  filesystem.py  help.py  mcp.py  pins.py  projects.py  push.py  search.py  sessions.py  settings.py  task_runs.py  workflows.py
src/copilot_console/app/services/: agent_discovery_service.py  agent_storage_service.py  automation_storage_service.py  completion_times_service.py  copilot_service.py  elicitation_service.py  event_bus.py  event_processor.py  help_service.py  logging_service.py  mcp_oauth_coordinator.py  mcp_service.py  notification_manager.py  pin_storage_service.py  project_service.py  push_service.py  response_buffer.py  search_service.py  session_client.py  session_service.py  storage_service.py  task_run_storage_service.py  task_runner_service.py  tools_service.py  viewed_service.py  workflow_engine.py  workflow_run_service.py  workflow_storage_service.py
src/copilot_console/seed/copilot-console/: mcp-config.json.template
src/copilot_console/seed/copilot-console/docs/: README.md
src/copilot_console/seed/copilot-console/workflows/: backend-feature-kickoff.yaml  feature-tour-advanced.yaml  (+3 more)
tests/: test_agent_discovery.py  test_concurrency_primitives.py  test_copilot_service.py  test_event_bus.py  test_event_processor_subagent.py  test_features_install_command.py  test_kick_compact.py  test_mcp_auto_enable_settings.py  test_mcp_canonical_source.py  test_mcp_crud_endpoint.py  test_mcp_crud_service.py  test_mcp_oauth_coordinator.py  test_mcp_retrigger_endpoint.py  test_mcp_settings_endpoint.py  test_pins_router.py  test_reasoning_text.py  test_session_config.py  test_storage_service.py  test_workflow_api.py  test_workflow_hitl.py  test_workflow_powerfx_guard.py  test_workflow_visualize_overlay.py
(+12 files in other folders)
