[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "copilot-console"
version = "0.6.2"
description = "Copilot Console - A feature-rich console for GitHub Copilot agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Sandeep" }
]
keywords = [
    "copilot",
    "github",
    "ai",
    "agent",
    "chat",
    "sessions",
    "web-ui",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: User Interfaces",
    "Topic :: Communications :: Chat",
]
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "python-multipart>=0.0.6",
    "httpx>=0.26.0",
    "sse-starlette>=2.0.0",
    "aiofiles>=23.0.0",
    "github-copilot-sdk>=0.2.0",
    "apscheduler>=3.10.0,<4.0.0",
    "pywebpush>=2.0.0",
    "agent-framework>=1.0.0rc2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.26.0",
    "ruff>=0.1.0",
    "build",
    "twine",
]

[project.scripts]
copilot-console = "copilot_console.cli:main"
cli-notify = "copilot_console.cli_notify:main"

[project.urls]
Homepage = "https://github.com/sanchar10/copilot-console"
Documentation = "https://github.com/sanchar10/copilot-console#readme"
Repository = "https://github.com/sanchar10/copilot-console"
Issues = "https://github.com/sanchar10/copilot-console/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/copilot_console"]

[tool.hatch.build.targets.wheel.force-include]
"frontend/dist" = "copilot_console/static"

[tool.hatch.build.targets.editable]
packages = ["src/copilot_console"]

[tool.hatch.build.targets.sdist]
include = [
    "src/",
    "frontend/dist/",
    "README.md",
    "LICENSE",
]

[tool.pytest.ini_options]
markers = [
    "e2e: End-to-end tests requiring a running backend (deselect with -m 'not e2e')",
]

[tool.ruff]
line-length = 100
